2009-05-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-yahoo-groups-table): Fix default regexp; add
	"news" group.
	(shimbun-index-url): Add special treatment for "news" group.
	(shimbun-get-headers): Ignore unwanted links in "news" group; don't
	lose a link that the default regexp skips; don't stop fetching headers
	in the first page.

2009-05-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-yahoo-groups-table): Fix default regexp.

2009-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-yahoo-groups-table): Update default regexp.
	(shimbun-yahoo-from-address, shimbun-yahoo-content-end): Update.
	(shimbun-get-headers): Follow change in shimbun-yahoo-groups-table.

	* sb-asahi.el (shimbun-asahi-clear-contents): Remove related topics.

2009-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-rss-build-message-id): New function that
	doesn't strip string following "?" or "#" in url when calculating its
	md5.

2009-04-26  David Engster  <dengste@eml.cc>

	* sb-sueddeutsche-de.el (shimbun-sueddeutsche-de-group-url): New RSS
	feeds.
	(shimbun-sueddeutsche-de-content-start)
	(shimbun-sueddeutsche-de-content-end): Adapt to new layout.
	(shimbun-get-headers): Removed. Use shimbun-article-url instead.
	(shimbun-rss-build-message-id): New URL scheme.
	(shimbun-clear-contents): Adapt to new layout.
	(shimbun-article-url): Retrieve URL for print version of article.

2009-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents): Remove ads.

2009-04-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Update index url for
	sankeisho group.

2009-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-clear-contents): Don't remove succeeding
	contents.

2009-04-05  ARISAWA Akihiro  <ari@mbf.ocn.ne.jp>

	* sb-atom.el (shimbun-atom-get-headers): Check `updated' and
	`published' element.
