@@ -1,3 +1,7 @@
+2009-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-m17n.el (shimbun-get-headers): Update archive url.
+
 2009-05-08  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-yahoo.el (shimbun-yahoo-groups-table): Fix default regexp; add
